--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 body{
     background: #1E1E1E;
 }
@@ -13,24 +12,6 @@ nav{
 
 .logo{
     width: 8%;
-}
-
-@media screen and (max-width: 487px) {
-    .logo {
-        width: 15%; 
-        }
-    }
-
-@media screen and (min-width: 487px) and (max-width: 1079px) {
-    .logo {
-        width: 10%;
-    }
-}
-
-@media screen and (min-width: 1080px) {
-    .logo {
-        width: 6%;;
-    }
 }
 
 .container{
@@ -96,15 +77,17 @@ nav{
     font-family: 'Be Vietnam Pro', sans-serif;
 }
 
+
 .list-group-item{
     background-color: #3C3C3C;
     color: #C4C4C4;
 }
 
-.card-body1{
+.card-bottom{
     display: flex;
-    justify-content: space-between;
-    margin: 2.5%;
+    justify-content: space-evenly;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 footer{
@@ -114,4 +97,54 @@ footer{
 
 .copi{
     color: #C4C4C4;
+}
+
+@media screen and (max-width: 487px) {
+    .logo {
+        width: 15%; 
+        }
+    .form-img{
+        display: none;
+    }
+    .navItem1{
+    
+    }
+    
+    .navItem2{
+    color: white;
+    }
+    .movie-form{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 3%;
+        gap: 10px;
+    }
+    }
+
+@media screen and (min-width: 487px) and (max-width: 990px) {
+    .logo {
+        width: 10%;
+    }
+    .form-img{
+        display: none;
+    }
+    .navItem1{
+        
+    }
+    
+    .navItem2{
+        color: white;
+    }
+    .movie-form{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 3%;
+        gap: 10px;
+    }
+}
+
+@media screen and (min-width: 991px) {
+    .logo {
+        width: 6%;;
+    }
 }
